cmake_minimum_required(VERSION 3.16)
project(GraphComp LANGUAGES C)
set(CMAKE_C_STANDARD 99)
add_executable(GraphComp
    src/abstract_declarator.c
    src/additive_expression.c
    src/alignment_specifier.c
    src/and_expression.c
    src/argument_expression_list.c
    src/assignment_expression.c
    src/assignment_operator.c
    src/ast.c
    src/atomic_type_specifier.c
    src/block_item_list.c
    src/block_item.c
    src/cast_expression.c
    src/compound_statement.c
    src/conditional_expression.c
    src/constant_expression.c
    src/constant.c
    src/declaration_list.c
    src/declaration_specifiers.c
    src/declaration.c
    src/declarator.c
    src/designation.c
    src/designator_list.c
    src/designator.c
    src/direct_abstract_declarator.c
    src/direct_declarator.c
    src/dot_create.c
    src/enum_specifier.c
    src/enumeration_constant.c
    src/enumerator_list.c
    src/enumerator.c
    src/equality_expression.c
    src/exclusive_or_expression.c
    src/expression_statement.c
    src/expression.c
    src/external_declaration.c
    src/function_definition.c
    src/function_specifier.c
    src/identifier_list.c
    src/inclusive_or_expression.c
    src/init_declarator_list.c
    src/init_declarator.c
    src/initializer_list.c
    src/initializer.c
    src/iteration_statement.c
    src/jump_statement.c
    src/labeled_statement.c
    src/logical_and_expression.c
    src/logical_or_expression.c
    src/main.c
    src/multiplicative_expression.c
    src/parameter_declaration.c
    src/parameter_list.c
    src/parameter_type_list.c
    src/parse_cmd_line.c
    src/pointer.c
    src/postfix_expression.c
    src/preproc.c
    src/primary_expression.c
    src/relational_expression.c
    src/selection_statement.c
    src/shift_expression.c
    src/specifier_qualifier_list.c
    src/statement.c
    src/static_assert_declaration.c
    src/storage_class_specifier.c
    src/string_symbol.c
    src/struct_declaration_list.c
    src/struct_declaration.c
    src/struct_declarator_list.c
    src/struct_declarator.c
    src/struct_or_union_specifier.c
    src/struct_or_union.c
    src/translation_unit.c
    src/type_name.c
    src/type_qualifier_list.c
    src/type_qualifier.c
    src/type_specifier.c
    src/unary_expression.c
    src/unary_operator.c
    lexer/lex.yy.c
    parser/grammar.tab.c
)
target_include_directories(GraphComp PUBLIC
    include
    parser
)
add_compile_options(GraphComp PUBLIC
    -Wall
    -Wextra
    -ggdb
    -pipe
)
target_compile_options(GraphComp PUBLIC
    -ggdb
)
